--- a/sosoorder/src/main/webapp/resources/admin/scss/addcss/jw.css
+++ b/sosoorder/src/main/webapp/resources/admin/scss/addcss/jw.css
@@ -365,7 +365,7 @@ table.tb_style_jw tr:nth-child(2n-1) td:nth-child(3) button{background: 0;
 }
 
 #callInsert{
-	position: absolute;
+	position: fixed;
     top: 50%;
     left: 50%;
     z-index: 100;
@@ -397,16 +397,11 @@ table.tb_style_jw tr:nth-child(2n-1) td:nth-child(3) button{background: 0;
 #callInsert .insertTitle i{float:right; cursor: pointer;}
 #callInsert .insertTitle i:hover{color: #4e73df;}
 .callInsert_wrap{padding: 25px; overflow: hidden;}
-.callInsert_wrap #seat{width:38%; height:45px;}
-.callInsert_wrap #message{width:60%; height:45px;}
-.callInsert_wrap #sendBtn{width:100%; height:45px; margin-top:10px}
-.callInsrt_bg{
-	width: 100%;
-    height: 100%;
-    background: #000;
-    opacity: 0.3;
-    z-index: 99;
-    position: absolute;
-    top: 0;
-    left: 0;
-}
+.callInsert_wrap #seat{ height:45px; margin-bottom:10px; }
+.callInsert_wrap #message{height:45px; margin-bottom:10px;}
+.callInsert_wrap #sendBtn{height:45px;  }
+.callInsrt_bg{width: 100%; height: 100%; background: #000;
+    opacity: 0.3;  z-index: 99;  position: fixed;  top: 0;  left: 0;}
+    
+
+    
