--- a/sosoorder/src/main/webapp/resources/admin/scss/addcss/jw.css
+++ b/sosoorder/src/main/webapp/resources/admin/scss/addcss/jw.css
@@ -403,5 +403,41 @@ table.tb_style_jw tr:nth-child(2n-1) td:nth-child(3) button{background: 0;
 .callInsrt_bg{width: 100%; height: 100%; background: #000;
     opacity: 0.3;  z-index: 99;  position: fixed;  top: 0;  left: 0;}
     
+#detail.disnone{display:none;}
+#detail{
+	width: 80%;
+    overflow: hidden;
+    position: absolute;
+    z-index: 9;
+    top: 50%;
+    left: 50%;
+    background: #fff;
+    transform: translate(-50%, -50%);
+    box-sizing: border-box;
+    padding: 5%;
+}
+.detail_photo{
+	width: 50%;
+    float: left;
+}
+.detail_photo img{width:100%}
+.detail_title{font-size:1.8em; font-weight:bold;}
 
-    
+#callListWrap{float:right}
+.slick_box.order{float:left;padding: 30px;}
+.listItem{
+	width: calc(33% - 20px);
+    margin: 10px;
+    height: 580px;
+    display: block;
+    background: #ececec;
+    padding: 25px;
+    border: 1px solid;
+    float: left;
+}
+@media  (max-width:1280px) {
+	.listItem{width: calc(50% - 20px);}
+}
+@media  (max-width:800px) {
+	.listItem{width: calc(100% - 20px);}
+}
