--- a/sosoorder/src/main/webapp/resources/admin/scss/addcss/hw.css
+++ b/sosoorder/src/main/webapp/resources/admin/scss/addcss/hw.css
@@ -286,38 +286,36 @@ font-size: 18px;
  text-align: center;
 }
 
-.
-
-/* 스크롤바 */
-  .scroll1 {
-    width: 250px;
-    height: 140px;
-    overflow: auto;
-  }
-  .scroll1::-webkit-scrollbar {
-    width: 10px;
-  }
-  .scroll1::-webkit-scrollbar-thumb {
-    background-color: #2f3542;
-    border-radius: 10px;
-  }
-  .scroll1::-webkit-scrollbar-track {
-    background-color: grey;
-    border-radius: 10px;
-    box-shadow: inset 0px 0px 5px white;
-  }
 
 .div_menu1{
 padding: 15px;
 background: white;
 }
 
+.btn_upt1{
+color: #222;color: #222 !important;
+border-radius: 10px;
+padding: 10px;
+background-color: #f8f9fc;
+text-align: bold;
+font-weight: bolder;
+font-size: 20px;
+}
+
+.btn_upt2{
+color: white;color: white !important;
+border-radius: 10px;
+padding: 10px;
+background-color: #222;
+text-align: bold;
+font-weight: bolder;
+font-size: 20px;
+	
+}
+
 /* 크키에 따라 처리 */
 @media (max-width:1660px) {
-	
-	
-	
-	
+
 }
 
 @media  (max-width:1280px) {
