--- a/sosoorder/src/main/webapp/resources/admin/scss/addcss/jw.css
+++ b/sosoorder/src/main/webapp/resources/admin/scss/addcss/jw.css
@@ -428,11 +428,11 @@ table.tb_style_jw tr:nth-child(2n-1) td:nth-child(3) button{background: 0;
 .listItem{
 	width: calc(33% - 20px);
     margin: 10px;
-    height: 580px;
+    height: 520px;
     display: block;
-    background: #ececec;
-    padding: 25px;
-    border: 1px solid;
+    background: #eaecf4;
+    padding: 10px;
+    border: 1px solid #e4e4e4;
     float: left;
 }
 @media  (max-width:1280px) {
